--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -1,4 +1,5 @@
-absolute-header.m4
+00gnulib.m4
+errno_h.m4
 error.m4
 exitfail.m4
 extensions.m4
@@ -11,8 +12,14 @@ gnulib-comp.m4
 gnulib-tool.m4
 include_next.m4
 inline.m4
+longlong.m4
+mode_t.m4
+multiarch.m4
+open.m4
 stat-time.m4
 stdbool.m4
+stddef_h.m4
+stdint.m4
 stdlib_h.m4
 strerror.m4
 string_h.m4
@@ -24,5 +31,8 @@ unistd_h.m4
 utimbuf.m4
 utimens.m4
 utimes.m4
+wchar.m4
+wchar_t.m4
+wint_t.m4
 xalloc.m4
 yesno.m4
