--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -1,6 +1,6 @@
 # Bootstrap configuration.
 
-# Copyright (C) 2006 Free Software Foundation, Inc.
+# Copyright (C) 2006, 2009 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -26,7 +26,12 @@ gnulib_modules='
 	fcntl
 	fcntl-safer
 	fdl
-	getopt
+	getopt-gnu
+	git-version-gen
+	gitlog-to-changelog
+	gnu-make
+	gnumakefile
+	maintainer-makefile
 	stat-time
 	sys_stat
 	time
@@ -44,3 +49,6 @@ gnulib_tool_option_extras="\
 
 # Create build-aux, since 'bootstrap' won't do that for us.
 mkdir -p build-aux
+
+# Automake requires that ChangeLog exist.
+touch ChangeLog
