avoid silent data loss e.g., on NFS, due to unchecked close of stdout
* gzip.c: Include "closein.h".
(main): Use atexit (close_stdin);
* bootstrap.conf (gnulib_modules): Add closein.
Prompted by Mark Kidwell's report and patch in
http://bugs.debian.org/538187
* NEWS (Bug fixes): Mention it.
* */.gitignore: Update.

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -1,6 +1,13 @@
 .deps
 Makefile
 Makefile.in
+close-stream.c
+close-stream.h
+closein.c
+closein.h
+closeout.c
+closeout.h
+config.charset
 config.h
 config.hin
 creat-safer.c
@@ -15,6 +22,16 @@ fcntl-safer.h
 fcntl.h
 fcntl.in.h
 fd-safer.c
+fflush.c
+fpending.c
+fpending.h
+fpurge.c
+freadahead.c
+freadahead.h
+freading.c
+freading.h
+fseeko.c
+ftello.c
 getopt.c
 getopt.in.h
 getopt1.c
@@ -23,16 +40,29 @@ gettext.h
 gnulib.mk
 intprops.h
 libgzip.a
+localcharset.c
+localcharset.h
+lseek.c
+mbrtowc.c
+mbsinit.c
 open-safer.c
 open.c
 pipe-safer.c
+quotearg.c
+quotearg.h
+ref-add.sin
+ref-del.sin
 stamp-h1
 stat-time.h
 stdbool.in.h
 stddef.in.h
 stdint.in.h
+stdio-impl.h
+stdio-write.c
+stdio.in.h
 stdlib.h
 stdlib.in.h
+streq.h
 strerror.c
 string.h
 string.in.h
@@ -47,7 +77,9 @@ unistd.h
 unistd.in.h
 utimens.c
 utimens.h
+verify.h
 wchar.in.h
+wctype.in.h
 xalloc-die.c
 xalloc.h
 xmalloc.c
