--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -1,11 +1,22 @@
 00gnulib.m4
+close-stream.m4
+closein.m4
+closeout.m4
+codeset.m4
 errno_h.m4
 error.m4
 exitfail.m4
 extensions.m4
 fcntl-safer.m4
 fcntl_h.m4
+fflush.m4
+fpending.m4
+fpurge.m4
+freading.m4
+fseeko.m4
+ftello.m4
 getopt.m4
+glibc21.m4
 gnu-make.m4
 gnulib-cache.m4
 gnulib-common.m4
@@ -13,14 +24,24 @@ gnulib-comp.m4
 gnulib-tool.m4
 include_next.m4
 inline.m4
+localcharset.m4
+locale-fr.m4
+locale-ja.m4
+locale-zh.m4
 longlong.m4
+lseek.m4
+mbrtowc.m4
+mbsinit.m4
+mbstate_t.m4
 mode_t.m4
 multiarch.m4
 open.m4
+quotearg.m4
 stat-time.m4
 stdbool.m4
 stddef_h.m4
 stdint.m4
+stdio_h.m4
 stdlib_h.m4
 strerror.m4
 string_h.m4
@@ -34,6 +55,7 @@ utimens.m4
 utimes.m4
 wchar.m4
 wchar_t.m4
+wctype.m4
 wint_t.m4
 xalloc.m4
 yesno.m4
