maint: update build-from-scratch infrastructure
* bootstrap: Modernize.
* bootstrap.conf: Modernize.
* cfg.mk: New file.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -1,11 +1,11 @@
 # Bootstrap configuration.
 
-# Copyright (C) 2006, 2009 Free Software Foundation, Inc.
+# Copyright (C) 2006-2009 Free Software Foundation, Inc.
 
-# This program is free software; you can redistribute it and/or modify
+# This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3, or (at your option)
-# any later version.
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
 
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -13,9 +13,7 @@
 # GNU General Public License for more details.
 
 # You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
-# 02110-1301, USA.
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
 # gzip doesn't use gettext.
@@ -51,5 +49,18 @@ gnulib_tool_option_extras="\
 # Create build-aux, since 'bootstrap' won't do that for us.
 mkdir -p build-aux
 
+# Build prerequisites
+buildreq="\
+autoconf   2.61
+automake   1.11
+autopoint  -
+gettext    -
+git        1.4.4
+makeinfo   -
+perl       5.5
+rsync      -
+tar        -
+"
+
 # Automake requires that ChangeLog exist.
-touch ChangeLog
+touch ChangeLog || exit 1
