--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -14,6 +14,7 @@ config.hin
 configmake.h
 creat-safer.c
 dup-safer.c
+errno.h
 errno.in.h
 error.c
 error.h
@@ -23,11 +24,13 @@ fcntl--.h
 fcntl-safer.h
 fcntl.h
 fcntl.in.h
+fcntl_.h
 fd-safer.c
 fflush.c
 fpending.c
 fpending.h
 fpurge.c
+fpurge.h
 freadahead.c
 freadahead.h
 freading.c
@@ -35,6 +38,7 @@ freading.h
 fseeko.c
 ftello.c
 getopt.c
+getopt.h
 getopt.in.h
 getopt1.c
 getopt_int.h
@@ -58,33 +62,49 @@ ref-del.sed
 ref-del.sin
 stamp-h1
 stat-time.h
+stdbool.h
 stdbool.in.h
+stdbool_.h
+stddef.h
 stddef.in.h
+stdint.h
 stdint.in.h
 stdio-impl.h
 stdio-write.c
 stdio.h
 stdio.in.h
+stdio_.h
 stdlib.h
 stdlib.in.h
+stdlib_.h
 streq.h
 strerror.c
 string.h
 string.in.h
 sys
+sys_stat.h
 sys_stat.in.h
+sys_stat_.h
+sys_time.h
 sys_time.in.h
+sys_time_.h
 time.h
 time.in.h
+time_.h
 unistd--.h
 unistd-safer.h
 unistd.h
 unistd.in.h
+unistd_.h
 utimens.c
 utimens.h
 verify.h
+wchar.h
 wchar.in.h
+wchar_.h
+wctype.h
 wctype.in.h
+wctype_.h
 xalloc-die.c
 xalloc.h
 xmalloc.c
