--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 # Make gzip (GNU zip).
 
-# Copyright (C) 1999, 2001, 2002, 2006, 2007 Free Software Foundation, Inc.
+# Copyright (C) 1999, 2001-2002, 2006-2007, 2009 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
