gzip: don't use an uninitialized file descriptor
gzip interprets an argument of "-" as indicating stdin, but when
"-" is not the first name on the command line, it doesn't work.
* gzip.c (treat_stdin): Initialize "ifd".
Patch and fine description by Lasse Collin in
http://www.mail-archive.com/bug-gzip@gnu.org/msg00213.html
* Makefile.am (check-local): Exercise the fix.  Based on the above.
* NEWS (Bug fixes): Mention this.

--- a/Makefile.am
+++ b/Makefile.am
@@ -95,6 +95,8 @@ check-local: $(FILES_TO_CHECK) $(bin_PROGRAMS) gzip.doc.gz
 	done
 	./gzip -dc $(srcdir)/tests/hufts-segv.gz > /dev/null 2>&1; \
 	  test $$? = 1
+	k=in-$$$$; printf a | ./gzip > $$k && \
+	  test "`cat $$k | ./gzip -dc $$k - $$k`" = aaa && rm $$k
 	@echo 'Test succeeded.'
 
 install-exec-hook: remove-installed-links
