build: use more gnulib modules for better POSIX compliance
* bootstrap.conf (gnulib_modules): Add modules exposed via
make CFLAGS=-DGNULIB_POSIXCHECK 2>&1 \
|perl -lne '/.* use gnulib module (\S+).*/ and print $1' \
|sort |uniq -c|sort -nr
Add these: calloc close fclose fprintf-posix lstat malloc
perror printf-posix realloc

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -21,16 +21,25 @@ IMPORT_FROM_GETTEXT=no
 
 # gnulib modules used by this package.
 gnulib_modules='
+	calloc
+	close
 	closein
+	fclose
 	fcntl
 	fcntl-safer
 	fdl
+	fprintf-posix
 	getopt-gnu
 	git-version-gen
 	gitlog-to-changelog
 	gnu-make
 	gnumakefile
+	lstat
 	maintainer-makefile
+	malloc
+	perror
+	printf-posix
+	realloc
 	stat-time
 	sys_stat
 	time
