--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -1,9 +1,16 @@
 .deps
 Makefile
 Makefile.in
+alloca.h
+alloca.in.h
+asnprintf.c
+calloc.c
 charset.alias
+close-hook.c
+close-hook.h
 close-stream.c
 close-stream.h
+close.c
 closein.c
 closein.h
 closeout.c
@@ -14,12 +21,14 @@ config.hin
 configmake.h
 creat-safer.c
 dup-safer.c
+dup2.c
 errno.h
 errno.in.h
 error.c
 error.h
 exitfail.c
 exitfail.h
+fclose.c
 fcntl--.h
 fcntl-safer.h
 fcntl.h
@@ -27,41 +36,80 @@ fcntl.in.h
 fcntl_.h
 fd-safer.c
 fflush.c
+float+.h
+float.h
+float.in.h
 fpending.c
 fpending.h
+fprintf.c
+fpucw.h
 fpurge.c
 fpurge.h
 freadahead.c
 freadahead.h
 freading.c
 freading.h
+frexp.c
+frexpl.c
 fseeko.c
+fseterr.c
+fseterr.h
 ftello.c
 getopt.c
 getopt.h
 getopt.in.h
 getopt1.c
 getopt_int.h
+getpagesize.c
 gettext.h
 gnulib.mk
 intprops.h
+isnan.c
+isnand-nolibm.h
+isnand.c
+isnanf-nolibm.h
+isnanf.c
+isnanl-nolibm.h
+isnanl.c
 libgzip.a
 localcharset.c
 localcharset.h
 lseek.c
+lstat.c
+malloc.c
+math.h
+math.in.h
 mbrtowc.c
 mbsinit.c
+memchr.c
+memchr.valgrind
 open-safer.c
 open.c
+perror.c
 pipe-safer.c
+printf-args.c
+printf-args.h
+printf-frexp.c
+printf-frexp.h
+printf-frexpl.c
+printf-frexpl.h
+printf-parse.c
+printf-parse.h
+printf.c
 quotearg.c
 quotearg.h
+realloc.c
 ref-add.sed
 ref-add.sin
 ref-del.sed
 ref-del.sin
+signbitd.c
+signbitf.c
+signbitl.c
+size_max.h
 stamp-h1
 stat-time.h
+stat.c
 stdbool.h
 stdbool.in.h
 stdbool_.h
@@ -98,7 +146,10 @@ unistd.in.h
 unistd_.h
 utimens.c
 utimens.h
+vasnprintf.c
+vasnprintf.h
 verify.h
+vfprintf.c
 wchar.h
 wchar.in.h
 wchar_.h
@@ -108,5 +159,6 @@ wctype_.h
 xalloc-die.c
 xalloc.h
 xmalloc.c
+xsize.h
 yesno.c
 yesno.h
