--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -1,22 +1,37 @@
 00gnulib.m4
 absolute-header.m4
+alloca.m4
+calloc.m4
 close-stream.m4
+close.m4
 closein.m4
 closeout.m4
 codeset.m4
+dos.m4
+dup2.m4
 errno_h.m4
 error.m4
 exitfail.m4
+exponentd.m4
+exponentf.m4
+exponentl.m4
 extensions.m4
+fclose.m4
 fcntl-safer.m4
 fcntl_h.m4
 fflush.m4
+float_h.m4
 fpending.m4
+fpieee.m4
+fprintf-posix.m4
 fpurge.m4
 freading.m4
+frexp.m4
+frexpl.m4
 fseeko.m4
 ftello.m4
 getopt.m4
+getpagesize.m4
 glibc21.m4
 gnu-make.m4
 gnulib-cache.m4
@@ -25,24 +40,46 @@ gnulib-comp.m4
 gnulib-tool.m4
 include_next.m4
 inline.m4
+intmax_t.m4
+inttypes_h.m4
+isnand.m4
+isnanf.m4
+isnanl.m4
+ldexpl.m4
 localcharset.m4
 locale-fr.m4
 locale-ja.m4
 locale-zh.m4
 longlong.m4
 lseek.m4
+lstat.m4
+malloc.m4
+math_h.m4
 mbrtowc.m4
 mbsinit.m4
 mbstate_t.m4
+memchr.m4
+mmap-anon.m4
 mode_t.m4
 multiarch.m4
+nocrash.m4
 open.m4
 openat.m4
+perror.m4
+printf-frexp.m4
+printf-frexpl.m4
+printf-posix-rpl.m4
+printf.m4
 quotearg.m4
+realloc.m4
+signbit.m4
+size_max.m4
 stat-time.m4
+stat.m4
 stdbool.m4
 stddef_h.m4
 stdint.m4
+stdint_h.m4
 stdio_h.m4
 stdlib_h.m4
 strerror.m4
@@ -55,9 +92,12 @@ unistd_h.m4
 utimbuf.m4
 utimens.m4
 utimes.m4
+vasnprintf.m4
+vfprintf-posix.m4
 wchar.m4
 wchar_t.m4
 wctype.m4
 wint_t.m4
 xalloc.m4
+xsize.m4
 yesno.m4
