maint: pull in two release-related modules from gnulib
* bootstrap.conf (gnulib_modules): Add announce-gen and gnupload.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -21,6 +21,7 @@ IMPORT_FROM_GETTEXT=no
 
 # gnulib modules used by this package.
 gnulib_modules='
+	announce-gen
 	calloc
 	close
 	closein
@@ -33,6 +34,7 @@ gnulib_modules='
 	git-version-gen
 	gitlog-to-changelog
 	gnu-make
+	gnupload
 	gnumakefile
 	lstat
 	maintainer-makefile
