--- a/zdiff.in
+++ b/zdiff.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # sh is buggy on RS/6000 AIX 3.2. Replace above line with #!/bin/ksh
 
-# Copyright (C) 1998, 2002, 2006, 2007 Free Software Foundation
+# Copyright (C) 1998, 2002, 2006, 2007, 2009 Free Software Foundation
 # Copyright (C) 1993 Jean-loup Gailly
 
 # This program is free software; you can redistribute it and/or modify
@@ -108,7 +108,7 @@ elif test $# -eq 2; then
 			  exec 4>&1
 			  (gzip -cdfq -- "$1" 4>&-; echo $? >&4) 3>&- |
 			    ( (gzip -cdfq -- "$2" 4>&-; echo $? >&4) 3>&- 5<&- </dev/null |
-			       eval "$cmp" /dev/fd/5 -) 5<&0
+			       eval "$cmp" /dev/fd/5 - >&3) 5<&0
 			)
 			case $gzip_status in
 			  *[1-9]*) gzip_status=1;;
