zdiff would exit 2 (error) rather than 1 for differences
* zdiff.in: Save and restore cmp's exit status around a case
statement that would otherwise clobber its value.
* NEWS (Bug fixes): Mention it.
* tests/zdiff: New test; exercise both bugs.
* tests/test-lib.sh: New file.  From coreutils.
* Makefile.am (EXTRA_DIST): Add tests/test-lib.sh.
(TESTS): Add tests/zdiff.
(TESTS_ENVIRONMENT): Define.  From coreutils.
(EXTRA_DIST): Append all $(TESTS).

--- a/.gitignore
+++ b/.gitignore
@@ -8,27 +8,27 @@
 .deps
 /GNUmakefile
 /maint.mk
-INSTALL
+/INSTALL
 Makefile
 Makefile.in
-aclocal.m4
-build-aux
-config.status
-configure
-gunzip
-gzexe
-gzip
-gzip-*
-zcat
-zcmp
-zdiff
-zegrep
-zfgrep
-zforce
-zgrep
-zless
-zmore
-znew
+/aclocal.m4
+/build-aux
+/config.status
+/configure
+/gunzip
+/gzexe
+/gzip
+/gzip-*
+/zcat
+/zcmp
+/zdiff
+/zegrep
+/zfgrep
+/zforce
+/zgrep
+/zless
+/zmore
+/znew
 /GNUmakefile
 /maint.mk
 ChangeLog
