build: use gnulib's fdopendir module
* bootstrap.conf (gnulib_modules): Add fdopendir.
* gzip.c (treat_dir): Don't depend on HAVE_FDOPENDIR.
Gnulib now guarantees its availability.
* configure.ac: Don't check for fdopendir here.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -29,14 +29,15 @@ fclose
 fcntl
 fcntl-safer
 fdl
+fdopendir
 fprintf-posix
 getopt-gnu
 git-version-gen
 gitlog-to-changelog
 gnu-make
 gnu-web-doc-update
-gnupload
 gnumakefile
+gnupload
 lstat
 maintainer-makefile
 malloc
