--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -4,8 +4,13 @@ Makefile.in
 alloca.h
 alloca.in.h
 asnprintf.c
+at-func.c
+basename-lgpl.c
 calloc.c
 charset.alias
+chdir-long.c
+chdir-long.h
+chown.c
 close-hook.c
 close-hook.h
 close-stream.c
@@ -20,6 +25,11 @@ config.h
 config.hin
 configmake.h
 creat-safer.c
+dirent.h
+dirent.in.h
+dirfd.c
+dirname-lgpl.c
+dirname.h
 dup-safer.c
 dup2.c
 errno.h
@@ -28,6 +38,10 @@ error.c
 error.h
 exitfail.c
 exitfail.h
+fchdir.c
+fchmodat.c
+fchown-stub.c
+fchownat.c
 fclose.c
 fcntl--.h
 fcntl-safer.h
@@ -35,6 +49,7 @@ fcntl.h
 fcntl.in.h
 fcntl_.h
 fd-safer.c
+fdopendir.c
 fflush.c
 float+.h
 float.h
@@ -54,7 +69,9 @@ frexpl.c
 fseeko.c
 fseterr.c
 fseterr.h
+fstatat.c
 ftello.c
+getcwd.c
 getopt.c
 getopt.h
 getopt.in.h
@@ -73,6 +90,7 @@ isnanf-nolibm.h
 isnanf.c
 isnanl-nolibm.h
 isnanl.c
+lchown.c
 libgzip.a
 localcharset.c
 localcharset.h
@@ -85,8 +103,17 @@ mbrtowc.c
 mbsinit.c
 memchr.c
 memchr.valgrind
+mempcpy.c
+memrchr.c
+mkdir.c
+mkdirat.c
 open-safer.c
 open.c
+openat-die.c
+openat-priv.h
+openat-proc.c
+openat.c
+openat.h
 perror.c
 pipe-safer.c
 printf-args.c
@@ -105,6 +132,10 @@ ref-add.sed
 ref-add.sin
 ref-del.sed
 ref-del.sin
+rmdir.c
+same-inode.h
+save-cwd.c
+save-cwd.h
 signbitd.c
 signbitf.c
 signbitl.c
@@ -127,10 +158,12 @@ stdio_.h
 stdlib.h
 stdlib.in.h
 stdlib_.h
+strdup.c
 streq.h
 strerror.c
 string.h
 string.in.h
+stripslash.c
 sys
 sys_stat.h
 sys_stat.in.h
@@ -147,6 +180,8 @@ unistd-safer.h
 unistd.h
 unistd.in.h
 unistd_.h
+unlink.c
+unlinkat.c
 utimens.c
 utimens.h
 vasnprintf.c
@@ -161,6 +196,8 @@ wctype.in.h
 wctype_.h
 xalloc-die.c
 xalloc.h
+xgetcwd.c
+xgetcwd.h
 xmalloc.c
 xsize.h
 yesno.c
