--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -2,13 +2,20 @@
 absolute-header.m4
 alloca.m4
 calloc.m4
+chdir-long.m4
+chown.m4
 clock_time.m4
 close-stream.m4
 close.m4
 closein.m4
 closeout.m4
 codeset.m4
+d-ino.m4
+dirent_h.m4
+dirfd.m4
+dirname.m4
 dos.m4
+double-slash-root.m4
 dup2.m4
 errno_h.m4
 error.m4
@@ -17,9 +24,11 @@ exponentd.m4
 exponentf.m4
 exponentl.m4
 extensions.m4
+fchdir.m4
 fclose.m4
 fcntl-safer.m4
 fcntl_h.m4
+fdopendir.m4
 fflush.m4
 float_h.m4
 fpending.m4
@@ -31,6 +40,9 @@ frexp.m4
 frexpl.m4
 fseeko.m4
 ftello.m4
+getcwd-abort-bug.m4
+getcwd-path-max.m4
+getcwd.m4
 getopt.m4
 getpagesize.m4
 gettime.m4
@@ -48,6 +60,7 @@ inttypes_h.m4
 isnand.m4
 isnanf.m4
 isnanl.m4
+lchown.m4
 ldexpl.m4
 localcharset.m4
 locale-fr.m4
@@ -63,6 +76,9 @@ mbrtowc.m4
 mbsinit.m4
 mbstate_t.m4
 memchr.m4
+mempcpy.m4
+memrchr.m4
+mkdir.m4
 mmap-anon.m4
 mode_t.m4
 multiarch.m4
@@ -76,6 +92,8 @@ printf-posix-rpl.m4
 printf.m4
 quotearg.m4
 realloc.m4
+rmdir.m4
+save-cwd.m4
 signbit.m4
 size_max.m4
 stat-time.m4
@@ -86,6 +104,7 @@ stdint.m4
 stdint_h.m4
 stdio_h.m4
 stdlib_h.m4
+strdup.m4
 strerror.m4
 string_h.m4
 sys_stat_h.m4
@@ -94,6 +113,7 @@ time_h.m4
 timespec.m4
 unistd-safer.m4
 unistd_h.m4
+unlink.m4
 utimbuf.m4
 utimens.m4
 utimes.m4
@@ -105,5 +125,6 @@ wchar_t.m4
 wctype.m4
 wint_t.m4
 xalloc.m4
+xgetcwd.m4
 xsize.m4
 yesno.m4
