build: with --enable-gcc-warnings, use -Werror
* Makefile.am (AM_CFLAGS): Enable $(WERROR_CFLAGS).
* lib/Makefile.am (AM_CFLAGS): Enable both $(WARN_CFLAGS) and
$(WERROR_CFLAGS).

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -21,6 +21,7 @@ include gnulib.mk
 
 libgzip_a_LIBADD += $(LIBOBJS)
 libgzip_a_DEPENDENCIES += $(LIBOBJS)
+AM_CFLAGS = $(WARN_CFLAGS) $(WERROR_CFLAGS)
 
 match.$(OBJEXT): match.c
 	cp $(srcdir)/match.c _match.S
