tests: exercise the segfault fix
* tests/helin-segv: New test.
* Makefile.am (TESTS): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -104,6 +104,7 @@ check-local: $(FILES_TO_CHECK) $(bin_PROGRAMS) gzip.doc.gz
 	@echo 'Test succeeded.'
 
 TESTS =						\
+  tests/helin-segv				\
   tests/memcpy-abuse				\
   tests/trailing-nul				\
   tests/zdiff					\
