fix "znew -K" to work without use of compress utility
* znew.in: Change -K option to imply -t, do not use compress(1).
* znew.1: Document it.
* tests/znew-k: New test.
* Makefile.am (TESTS): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -108,7 +108,8 @@ TESTS =						\
   tests/memcpy-abuse				\
   tests/trailing-nul				\
   tests/zdiff					\
-  tests/zgrep-f
+  tests/zgrep-f					\
+  tests/znew-k
 
 EXTRA_DIST += $(TESTS)
 
