zgrep: terminate gracefully when a pipeline is interrupted by a signal
zgrep is not terminated gracefully when its grep/sed pipeline
is terminated by a signal.  For example, a command like
zgrep -F .TH /usr/share/man/man1/*.gz | head
continues working long after the "head" process completes.
Another example, a command like
zgrep unmatched-pattern /usr/share/man/man1/*.gz
cannot be interrupted by sending a SIGQUIT with Ctrl-\ key, it outputs
zgrep: line 221: test: : integer expression expected
and goes on.
* zgrep.in: Terminate gracefully when the grep/sed pipeline is
terminated by a signal.
* tests/zgrep-signal: New test.
* Makefile.am (TESTS): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -110,6 +110,7 @@ TESTS =						\
   tests/trailing-nul				\
   tests/zdiff					\
   tests/zgrep-f					\
+  tests/zgrep-signal				\
   tests/znew-k
 
 EXTRA_DIST += $(TESTS)
