--- a/znew.in
+++ b/znew.in
@@ -97,7 +97,7 @@ do
 done
 
 if test $# -eq 0; then
-  echo "$usage"
+  echo >&2 "$0: invalid number of operands; try \`$0 --help' for help"
   exit 1
 fi
 
