tests: flip and adjust mixed test, now that the bug is fixed
* NEWS (Bug fixes): Mention the fix.
* Makefile.am (XFAIL_TESTS): Move tests/mixed from here...
(TESTS): ...to here.
* tests/mixed: Comment out the currently (always?) failing part.

--- a/Makefile.am
+++ b/Makefile.am
@@ -99,13 +99,11 @@ check-local: $(FILES_TO_CHECK) $(bin_PROGRAMS) gzip.doc.gz
 	done
 	@echo 'Test succeeded.'
 
-XFAIL_TESTS =					\
-  tests/mixed
-
 TESTS =						\
   tests/helin-segv				\
   tests/hufts					\
   tests/memcpy-abuse				\
+  tests/mixed					\
   tests/stdin					\
   tests/trailing-nul				\
   tests/zdiff					\
