--- a/zcmp.in
+++ b/zcmp.in
@@ -1,7 +1,7 @@
 #!/bin/sh
 # Compare the uncompressed contents of compressed files, byte by byte.
 
-# Copyright (C) 2007 Free Software Foundation
+# Copyright (C) 2007-2010 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -42,9 +42,10 @@ If a FILE is '-' or missing, read standard input.
 
 Report bugs to <bug-gzip@gnu.org>."
 
+st=0
 case $1 in
---help)    exec echo "$usage";;
---version) exec echo "$version";;
+--help)    echo "$usage" || st=2; exit $st;;
+--version) echo "$version" || st=2; exit $st;;
 esac
 
 exec zdiff --__cmp "$@"
