tests: exercise the fix for the decompression data-loss bug
* tests/null-suffix-clobber: New file.
* Makefile.am (TESTS): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -108,6 +108,7 @@ TESTS =						\
   tests/hufts					\
   tests/memcpy-abuse				\
   tests/mixed					\
+  tests/null-suffix-clobber			\
   tests/stdin					\
   tests/trailing-nul				\
   tests/zdiff					\
