build: update gnulib submodule to latest, and adapt
* cfg.mk: Update to use new _sc_search_regexp interface.  Run this:
perl -pi -e 's/\b_prohibit_regexp\b/_sc_search_regexp/;'
-e 's/\bmsg=/halt=/; s/\bre=/prohibit=/;' cfg.mk
and then adjust backslashes so they still line up.
* cfg.mk (local-checks-to-skip): Add new sc_texinfo_acronym, to skip it.
* msdos/tailor.c (fcalloc): Mark a diagnostic for translation, to
placate stricter syntax-check, even though no one uses this file.

--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -11,6 +11,8 @@ charset.alias
 chdir-long.c
 chdir-long.h
 chown.c
+cloexec.c
+cloexec.h
 close-hook.c
 close-hook.h
 close-stream.c
@@ -73,6 +75,7 @@ fseterr.h
 fstatat.c
 ftello.c
 getcwd.c
+getdtablesize.c
 getopt.c
 getopt.h
 getopt.in.h
