--- a/configure.ac
+++ b/configure.ac
@@ -154,18 +154,18 @@ AC_CACHE_CHECK([for an assembler syntax supported by this package],
    *' NO_ASM '*) ;;
    *)
      if cp $srcdir/lib/match.c _match.S &&
-        eval "$CPP $CPPFLAGS $ASCPPFLAGS _match.S > _match.i" 2>/dev/null &&
-        eval "$ASCPPPOST < _match.i > match_.s" 2>/dev/null; then
+        eval "$CPP $CPPFLAGS $ASCPPFLAGS _match.S > _match.i" &&
+        eval "$ASCPPPOST < _match.i > match_.s"; then
        if test ! -s match_.s || grep error < match_.s > /dev/null; then
          :
-       elif eval "$CC $CPPFLAGS $CFLAGS -c match_.s >/dev/null 2>&1" &&
+       elif eval "$CC $CPPFLAGS $CFLAGS -c match_.s >/dev/null" &&
             test -f match_.$OBJEXT; then
          rm -f match_.$OBJEXT
          gzip_cv_assembler=yes
          if echo 'void foo (void) {}' > conftest.c &&
-            eval "$CC $CPPFLAGS $CFLAGS -S conftest.c >/dev/null 2>&1" &&
-            grep '\.note\.GNU-stack' conftest.s >/dev/null 2>&1 &&
-            eval "$CC $CPPFLAGS $CFLAGS -c -Wa,--noexecstack match_.s >/dev/null 2>&1" &&
+            eval "$CC $CPPFLAGS $CFLAGS -S conftest.c >/dev/null" &&
+            grep '\.note\.GNU-stack' conftest.s >/dev/null &&
+            eval "$CC $CPPFLAGS $CFLAGS -c -Wa,--noexecstack match_.s >/dev/null" &&
             test -f match_.$OBJEXT; then
            gzip_cv_assembler='yes, with -Wa,--noexecstack'
          fi
