tests: arrange for skip and failure notices to go to stderr, not .log
* tests/init.cfg: New file.  Make init.sh's stderr_fileno_ match
what the "exec 9>&2" we use in TESTS_ENVIRONMENT.
* Makefile.am (EXTRA_DIST): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -120,6 +120,7 @@ TESTS =						\
   tests/znew-k
 
 EXTRA_DIST += $(TESTS)
+EXTRA_DIST += tests/init.cfg
 
 install-exec-hook: remove-installed-links
 install-exec-hook remove-installed-links:
