maint: remove primos support
* Makefile.am (EXTRA_DIST): Remove all primos/ files.
* primos/build.cpl: Remove file.
* primos/ci.opts: Likewise.
* primos/include/errno.h: Likewise.
* primos/include/fcntl.h: Likewise.
* primos/include/stdlib.h: Likewise.
* primos/include/sysStat.h: Likewise.
* primos/include/sysTypes.h: Likewise.
* primos/primos.c: Likewise.
* primos/readme: Likewise.

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,10 +44,8 @@ EXTRA_DIST = $(ACINCLUDE_INPUTS) $(man_MANS) \
   gunzip.in gzexe.in gzip.doc gzip.h lzw.h msdos/match.asm msdos/tailor.c \
   msdos/gzip.prj msdos/doturboc.bat msdos/Makefile.msc msdos/Makefile.bor \
   msdos/Makefile.djg nt/Makefile.nt os2/gzip.def os2/Makefile.os2 \
-  os2/gzip16.def primos/include/errno.h primos/include/fcntl.h \
-  primos/include/stdlib.h primos/include/sysStat.h \
-  primos/include/sysTypes.h primos/build.cpl primos/readme \
-  primos/primos.c primos/ci.opts revision.h sample/makecrc.c \
+  os2/gzip16.def \
+  revision.h sample/makecrc.c \
   sample/ztouch sample/add.c sample/sub.c sample/zread.c sample/zfile \
   tailor.h vms/Makefile.mms vms/gzip.hlp vms/vms.c vms/Readme.vms \
   vms/Makefile.vms vms/Makefile.gcc vms/makegzip.com zcat.in zcmp.in zdiff.in \
