--- a/lib/.gitignore
+++ b/lib/.gitignore
@@ -1,209 +1,209 @@
 .deps
-Makefile
-Makefile.in
-alloca.h
-alloca.in.h
-asnprintf.c
-at-func.c
-basename-lgpl.c
-calloc.c
-charset.alias
-chdir-long.c
-chdir-long.h
-chown.c
-cloexec.c
-cloexec.h
-close-hook.c
-close-hook.h
-close-stream.c
-close-stream.h
-close.c
-closein.c
-closein.h
-closeout.c
-closeout.h
-config.charset
-config.h
-config.hin
-configmake.h
-creat-safer.c
-dirent.h
-dirent.in.h
-dirfd.c
-dirname-lgpl.c
-dirname.h
-dup-safer.c
-dup2.c
-errno.h
-errno.in.h
-error.c
-error.h
-exitfail.c
-exitfail.h
-fchdir.c
-fchmodat.c
-fchown-stub.c
-fchownat.c
-fclose.c
-fcntl--.h
-fcntl-safer.h
-fcntl.c
-fcntl.h
-fcntl.in.h
-fcntl_.h
-fd-safer.c
-fdopendir.c
-fflush.c
-float+.h
-float.h
-float.in.h
-fpending.c
-fpending.h
-fprintf.c
-fpucw.h
-fpurge.c
-fpurge.h
-freadahead.c
-freadahead.h
-freading.c
-freading.h
-frexp.c
-frexpl.c
-fseeko.c
-fseterr.c
-fseterr.h
-fstatat.c
-ftello.c
-getcwd.c
-getdtablesize.c
-getopt.c
-getopt.h
-getopt.in.h
-getopt1.c
-getopt_int.h
-getpagesize.c
-gettext.h
-gettime.c
-gettimeofday.c
-gnulib.mk
-ignore-value.h
-intprops.h
-isnan.c
-isnand-nolibm.h
-isnand.c
-isnanf-nolibm.h
-isnanf.c
-isnanl-nolibm.h
-isnanl.c
-lchown.c
-libgzip.a
-localcharset.c
-localcharset.h
-lseek.c
-lstat.c
-malloc.c
-math.h
-math.in.h
-mbrtowc.c
-mbsinit.c
-memchr.c
-memchr.valgrind
-mempcpy.c
-memrchr.c
-mkdir.c
-mkdirat.c
-open-safer.c
-open.c
-openat-die.c
-openat-priv.h
-openat-proc.c
-openat.c
-openat.h
-perror.c
-pipe-safer.c
-printf-args.c
-printf-args.h
-printf-frexp.c
-printf-frexp.h
-printf-frexpl.c
-printf-frexpl.h
-printf-parse.c
-printf-parse.h
-printf.c
-quotearg.c
-quotearg.h
-realloc.c
-ref-add.sed
-ref-add.sin
-ref-del.sed
-ref-del.sin
-rmdir.c
-same-inode.h
-save-cwd.c
-save-cwd.h
-signbitd.c
-signbitf.c
-signbitl.c
-size_max.h
-stamp-h1
-stat-time.h
-stat.c
-stdbool.h
-stdbool.in.h
-stdbool_.h
-stddef.h
-stddef.in.h
-stdint.h
-stdint.in.h
-stdio-impl.h
-stdio-write.c
-stdio.h
-stdio.in.h
-stdio_.h
-stdlib.h
-stdlib.in.h
-stdlib_.h
-strdup.c
-streq.h
-strerror.c
-string.h
-string.in.h
-stripslash.c
-sys
-sys_stat.h
-sys_stat.in.h
-sys_stat_.h
-sys_time.h
-sys_time.in.h
-sys_time_.h
-time.h
-time.in.h
-time_.h
-timespec.h
-unistd--.h
-unistd-safer.h
-unistd.h
-unistd.in.h
-unistd_.h
-unlink.c
-unlinkat.c
-utimens.c
-utimens.h
-vasnprintf.c
-vasnprintf.h
-verify.h
-vfprintf.c
-wchar.h
-wchar.in.h
-wchar_.h
-wctype.h
-wctype.in.h
-wctype_.h
-xalloc-die.c
-xalloc.h
-xgetcwd.c
-xgetcwd.h
-xmalloc.c
-xsize.h
-yesno.c
-yesno.h
+/Makefile
+/Makefile.in
+/alloca.h
+/alloca.in.h
+/asnprintf.c
+/at-func.c
+/basename-lgpl.c
+/calloc.c
+/charset.alias
+/chdir-long.c
+/chdir-long.h
+/chown.c
+/cloexec.c
+/cloexec.h
+/close-hook.c
+/close-hook.h
+/close-stream.c
+/close-stream.h
+/close.c
+/closein.c
+/closein.h
+/closeout.c
+/closeout.h
+/config.charset
+/config.h
+/config.hin
+/configmake.h
+/creat-safer.c
+/dirent.h
+/dirent.in.h
+/dirfd.c
+/dirname-lgpl.c
+/dirname.h
+/dup-safer.c
+/dup2.c
+/errno.h
+/errno.in.h
+/error.c
+/error.h
+/exitfail.c
+/exitfail.h
+/fchdir.c
+/fchmodat.c
+/fchown-stub.c
+/fchownat.c
+/fclose.c
+/fcntl--.h
+/fcntl-safer.h
+/fcntl.c
+/fcntl.h
+/fcntl.in.h
+/fcntl_.h
+/fd-safer.c
+/fdopendir.c
+/fflush.c
+/float+.h
+/float.h
+/float.in.h
+/fpending.c
+/fpending.h
+/fprintf.c
+/fpucw.h
+/fpurge.c
+/fpurge.h
+/freadahead.c
+/freadahead.h
+/freading.c
+/freading.h
+/frexp.c
+/frexpl.c
+/fseeko.c
+/fseterr.c
+/fseterr.h
+/fstatat.c
+/ftello.c
+/getcwd.c
+/getdtablesize.c
+/getopt.c
+/getopt.h
+/getopt.in.h
+/getopt1.c
+/getopt_int.h
+/getpagesize.c
+/gettext.h
+/gettime.c
+/gettimeofday.c
+/gnulib.mk
+/ignore-value.h
+/intprops.h
+/isnan.c
+/isnand-nolibm.h
+/isnand.c
+/isnanf-nolibm.h
+/isnanf.c
+/isnanl-nolibm.h
+/isnanl.c
+/lchown.c
+/libgzip.a
+/localcharset.c
+/localcharset.h
+/lseek.c
+/lstat.c
+/malloc.c
+/math.h
+/math.in.h
+/mbrtowc.c
+/mbsinit.c
+/memchr.c
+/memchr.valgrind
+/mempcpy.c
+/memrchr.c
+/mkdir.c
+/mkdirat.c
+/open-safer.c
+/open.c
+/openat-die.c
+/openat-priv.h
+/openat-proc.c
+/openat.c
+/openat.h
+/perror.c
+/pipe-safer.c
+/printf-args.c
+/printf-args.h
+/printf-frexp.c
+/printf-frexp.h
+/printf-frexpl.c
+/printf-frexpl.h
+/printf-parse.c
+/printf-parse.h
+/printf.c
+/quotearg.c
+/quotearg.h
+/realloc.c
+/ref-add.sed
+/ref-add.sin
+/ref-del.sed
+/ref-del.sin
+/rmdir.c
+/same-inode.h
+/save-cwd.c
+/save-cwd.h
+/signbitd.c
+/signbitf.c
+/signbitl.c
+/size_max.h
+/stamp-h1
+/stat-time.h
+/stat.c
+/stdbool.h
+/stdbool.in.h
+/stdbool_.h
+/stddef.h
+/stddef.in.h
+/stdint.h
+/stdint.in.h
+/stdio-impl.h
+/stdio-write.c
+/stdio.h
+/stdio.in.h
+/stdio_.h
+/stdlib.h
+/stdlib.in.h
+/stdlib_.h
+/strdup.c
+/streq.h
+/strerror.c
+/string.h
+/string.in.h
+/stripslash.c
+/sys
+/sys_stat.h
+/sys_stat.in.h
+/sys_stat_.h
+/sys_time.h
+/sys_time.in.h
+/sys_time_.h
+/time.h
+/time.in.h
+/time_.h
+/timespec.h
+/unistd--.h
+/unistd-safer.h
+/unistd.h
+/unistd.in.h
+/unistd_.h
+/unlink.c
+/unlinkat.c
+/utimens.c
+/utimens.h
+/vasnprintf.c
+/vasnprintf.h
+/verify.h
+/vfprintf.c
+/wchar.h
+/wchar.in.h
+/wchar_.h
+/wctype.h
+/wctype.in.h
+/wctype_.h
+/xalloc-die.c
+/xalloc.h
+/xgetcwd.c
+/xgetcwd.h
+/xmalloc.c
+/xsize.h
+/yesno.c
+/yesno.h
