--- a/m4/.gitignore
+++ b/m4/.gitignore
@@ -1,139 +1,139 @@
-00gnulib.m4
-absolute-header.m4
-alloca.m4
-asm-underscore.m4
-calloc.m4
-chdir-long.m4
-chown.m4
-clock_time.m4
-cloexec.m4
-close-stream.m4
-close.m4
-closein.m4
-closeout.m4
-codeset.m4
-d-ino.m4
-dirent_h.m4
-dirfd.m4
-dirname.m4
-dos.m4
-double-slash-root.m4
-dup2.m4
-errno_h.m4
-error.m4
-exitfail.m4
-exponentd.m4
-exponentf.m4
-exponentl.m4
-extensions.m4
-fchdir.m4
-fclose.m4
-fcntl-o.m4
-fcntl-safer.m4
-fcntl.m4
-fcntl_h.m4
-fdopendir.m4
-fflush.m4
-float_h.m4
-fpending.m4
-fpieee.m4
-fprintf-posix.m4
-fpurge.m4
-freading.m4
-frexp.m4
-frexpl.m4
-fseeko.m4
-ftello.m4
-getcwd-abort-bug.m4
-getcwd-path-max.m4
-getcwd.m4
-getdtablesize.m4
-getopt.m4
-getpagesize.m4
-gettime.m4
-gettimeofday.m4
-glibc21.m4
-gnu-make.m4
-gnulib-cache.m4
-gnulib-common.m4
-gnulib-comp.m4
-gnulib-tool.m4
-include_next.m4
-inline.m4
-intmax_t.m4
-inttypes_h.m4
-isnand.m4
-isnanf.m4
-isnanl.m4
-lchown.m4
-ldexpl.m4
-lib-ignore.m4
-localcharset.m4
-locale-fr.m4
-locale-ja.m4
-locale-zh.m4
-longlong.m4
-lseek.m4
-lstat.m4
-malloc.m4
-manywarnings.m4
-math_h.m4
-mbrtowc.m4
-mbsinit.m4
-mbstate_t.m4
-memchr.m4
-mempcpy.m4
-memrchr.m4
-mkdir.m4
-mmap-anon.m4
-mode_t.m4
-multiarch.m4
-nocrash.m4
-open.m4
-openat.m4
-perror.m4
-printf-frexp.m4
-printf-frexpl.m4
-printf-posix-rpl.m4
-printf.m4
-quotearg.m4
-realloc.m4
-rmdir.m4
-save-cwd.m4
-signbit.m4
-size_max.m4
-stat-time.m4
-stat.m4
-stdbool.m4
-stddef_h.m4
-stdint.m4
-stdint_h.m4
-stdio_h.m4
-stdlib_h.m4
-strdup.m4
-strerror.m4
-string_h.m4
-sys_stat_h.m4
-sys_time_h.m4
-time_h.m4
-timespec.m4
-unistd-safer.m4
-unistd_h.m4
-unlink.m4
-utimbuf.m4
-utimens.m4
-utimes.m4
-vasnprintf.m4
-vfprintf-posix.m4
-warn-on-use.m4
-warnings.m4
-wchar.m4
-wchar_h.m4
-wchar_t.m4
-wctype.m4
-wctype_h.m4
-wint_t.m4
-xalloc.m4
-xgetcwd.m4
-xsize.m4
-yesno.m4
+/00gnulib.m4
+/absolute-header.m4
+/alloca.m4
+/asm-underscore.m4
+/calloc.m4
+/chdir-long.m4
+/chown.m4
+/clock_time.m4
+/cloexec.m4
+/close-stream.m4
+/close.m4
+/closein.m4
+/closeout.m4
+/codeset.m4
+/d-ino.m4
+/dirent_h.m4
+/dirfd.m4
+/dirname.m4
+/dos.m4
+/double-slash-root.m4
+/dup2.m4
+/errno_h.m4
+/error.m4
+/exitfail.m4
+/exponentd.m4
+/exponentf.m4
+/exponentl.m4
+/extensions.m4
+/fchdir.m4
+/fclose.m4
+/fcntl-o.m4
+/fcntl-safer.m4
+/fcntl.m4
+/fcntl_h.m4
+/fdopendir.m4
+/fflush.m4
+/float_h.m4
+/fpending.m4
+/fpieee.m4
+/fprintf-posix.m4
+/fpurge.m4
+/freading.m4
+/frexp.m4
+/frexpl.m4
+/fseeko.m4
+/ftello.m4
+/getcwd-abort-bug.m4
+/getcwd-path-max.m4
+/getcwd.m4
+/getdtablesize.m4
+/getopt.m4
+/getpagesize.m4
+/gettime.m4
+/gettimeofday.m4
+/glibc21.m4
+/gnu-make.m4
+/gnulib-cache.m4
+/gnulib-common.m4
+/gnulib-comp.m4
+/gnulib-tool.m4
+/include_next.m4
+/inline.m4
+/intmax_t.m4
+/inttypes_h.m4
+/isnand.m4
+/isnanf.m4
+/isnanl.m4
+/lchown.m4
+/ldexpl.m4
+/lib-ignore.m4
+/localcharset.m4
+/locale-fr.m4
+/locale-ja.m4
+/locale-zh.m4
+/longlong.m4
+/lseek.m4
+/lstat.m4
+/malloc.m4
+/manywarnings.m4
+/math_h.m4
+/mbrtowc.m4
+/mbsinit.m4
+/mbstate_t.m4
+/memchr.m4
+/mempcpy.m4
+/memrchr.m4
+/mkdir.m4
+/mmap-anon.m4
+/mode_t.m4
+/multiarch.m4
+/nocrash.m4
+/open.m4
+/openat.m4
+/perror.m4
+/printf-frexp.m4
+/printf-frexpl.m4
+/printf-posix-rpl.m4
+/printf.m4
+/quotearg.m4
+/realloc.m4
+/rmdir.m4
+/save-cwd.m4
+/signbit.m4
+/size_max.m4
+/stat-time.m4
+/stat.m4
+/stdbool.m4
+/stddef_h.m4
+/stdint.m4
+/stdint_h.m4
+/stdio_h.m4
+/stdlib_h.m4
+/strdup.m4
+/strerror.m4
+/string_h.m4
+/sys_stat_h.m4
+/sys_time_h.m4
+/time_h.m4
+/timespec.m4
+/unistd-safer.m4
+/unistd_h.m4
+/unlink.m4
+/utimbuf.m4
+/utimens.m4
+/utimes.m4
+/vasnprintf.m4
+/vfprintf-posix.m4
+/warn-on-use.m4
+/warnings.m4
+/wchar.m4
+/wchar_h.m4
+/wchar_t.m4
+/wctype.m4
+/wctype_h.m4
+/wint_t.m4
+/xalloc.m4
+/xgetcwd.m4
+/xsize.m4
+/yesno.m4
