--- a/zgrep.in
+++ b/zgrep.in
@@ -3,7 +3,9 @@
 # zgrep -- a wrapper around a grep program that decompresses files as needed
 # Adapted from a version sent by Charles Levert <charles@comm.polymtl.ca>
 
-# Copyright (C) 1998, 2001, 2002, 2006, 2007, 2009 Free Software Foundation
+# Copyright (C) 1998, 2001, 2002, 2006, 2007, 2009, 2010 Free Software
+# Foundation
+
 # Copyright (C) 1993 Jean-loup Gailly
 
 # This program is free software; you can redistribute it and/or modify
@@ -29,7 +31,7 @@ PATH=$bindir:$PATH
 grep='${GREP-grep}'
 
 version='zgrep (gzip) @VERSION@
-Copyright (C) 2007, 2009-2010 Free Software Foundation, Inc.
+Copyright (C) 2010 Free Software Foundation, Inc.
 This is free software.  You may redistribute copies of it under the terms of
 the GNU General Public License <http://www.gnu.org/licenses/gpl.html>.
 There is NO WARRANTY, to the extent permitted by law.
